fixed box sizes so width stays the same when changing grid size

--- a/style.css
+++ b/style.css
@@ -6,20 +6,17 @@ h1 {
 
 .container {
     display: flex;
+    justify-content:center;
     flex-wrap: wrap;
     margin: auto;
     box-sizing: border-box;
-    justify-content: center;
-    border: 1px solid black;
     width: 960px;
     height: 600px;
 }
 
 
-.row {
+.box {
     border: 1px solid black;
-    height: 50px;
-    width: 50px;
     box-sizing: border-box;
 }
  
